# cblrepo

./: .ghci  .gitignore  .vimprj  README.md  Setup.hs  cblrepo.cabal  description.otl
data/: 7.8.0_pkgs  ghc-7.6.3_pkgs  ghc-7.8.2_pkgs
src/: Add.hs  AddBase.hs  AddCabal.hs  BuildPkgs.hs  BumpPkgs.hs  ConvertDB.hs  CreateConfig.hs  Extract.hs  IdxSync.hs  IdxUpdate.hs  IdxVersion.hs  ListPkgs.hs  Main.hs  OldPkgDB.hs  OldPkgDB.hs-boot  OldPkgTypes.hs  PkgBuild.hs  PkgDB.hs  PkgDB.hs-boot  PkgTypes.hs  PrintUsers.hs  Remove.hs  Sync.hs  SystemPkgs.hs  Update.hs  Updates.hs  Upgrades.hs  Urls.hs  Utils.hs  Versions.hs
src/ArchLnx/: Translation.hs
src/Util/: Cabal.hs  Cfg.hs  Dist.hs  HackageIndex.hs  Misc.hs  Translation.hs
test-scripts/: base-pkgs  community-pkgs  create-base-db  extra-pkgs  get-ah-cabals  ghc-pkgs
tests/: 00sync.test  add.test  build.test  bump.test  config.test  extract.test  flags.test  list.test  pkgbuild.test  self-referencing-cabal.test  urls.test
tests/data/: bar.cabal  baz.cabal  flags-file0.cabal  foo-self.cabal  foo.cabal
tst/: TestOldPkgDB.hs  TestPkgDB.hs  TestSystem.hs  tst.hs
