name: cblrepo
version: 0.22.0
cabal-version: >= 1.23
license: OtherLicense
license-file: LICENSE-2.0
copyright: Copyright (c) 2011 Magnus Therning
author: Magnus Therning
maintainer: Magnus Therning <magnus@therning.org>
stability: experimental
bug-reports: mailto:magnus@therning.org
synopsis: Tool to maintain a database of CABAL packages and their dependencies
description:
            Helper tool for people maintaining a set of CABAL packages for their
            distribution. It maintains a database of packages and verifies
            dependencies of the entire set as packages are added or updated. It
            also makes it trivial to track packages as new versions are released
            on Hackage.

            It can also be used to build source packages for the Arch Linux
            distribution.
category: Utils, Distribution
build-type: Custom

custom-setup
    setup-depends: base, Cabal

executable cblrepo
    hs-source-dirs: src
    main-is: Main.hs
    other-modules: Add
                   BuildPkgs
                   BumpPkgs
                   ConvertDB
                   CreateConfig
                   Extract
                   ListPkgs
                   OldPkgDB
                   OldPkgTypes
                   PkgBuild
                   PkgDB
                   PkgTypes
                   Remove
                   Update
                   Upgrades
                   Util.Cabal
                   Util.Cfg
                   Util.Dist
                   Util.HackageIndex
                   Util.Misc
                   Util.Translation
                   Versions
    build-depends: base ==4.9.*,
                   filepath ==1.4.*,
                   directory ==1.2.*,
                   Cabal ==1.24.*,
                   transformers ==0.5.*,
                   bytestring ==0.10.*,
                   tar ==0.5.*,
                   zlib ==0.6.*,
                   mtl ==2.2.*,
                   process ==1.4.*,
                   Unixutils ==1.54.*,
                   unix ==2.7.*,
                   ansi-wl-pprint ==0.6.*,
                   aeson ==0.11.*,
                   stringsearch ==0.3.*,
                   optparse-applicative ==0.12.*,
                   safe ==0.3.*,
                   containers ==0.5.*,
                   utf8-string ==1.0.*,
                   text,
                   vector
    default-language: Haskell2010

Source-Repository head
    Type: git
    Location: https://github.com/magthe/cblrepo.git

-- vim: set tw=0 :
